fixed social links colors in dark mode

--- a/css/contact.css
+++ b/css/contact.css
@@ -12,3 +12,7 @@
     color: #48b6cd !important;
     border: none;
 }
+
+.tabs-bg-dark {
+    background-color: #212629 !important;
+}
